Jap Repository Added !!    H2 Data Base enabled !!    All list Functions transferred to JobRepository !!    Annotation in Job entity for DataBase Functions !!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# suppress inspection "UnusedProperty" for whole file
+# suppress inspection "UnusedProperty"
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
 
